Add GitHub source authorization connector