@@ -21,12 +21,19 @@ class FileConnectorBatchSourceTests {
 
         List<ConnectorCrawlBatch> batches = source.pendingBatches().batches();
 
-        assertEquals(3, batches.size());
-        assertEquals("cursor-01-initial", batches.get(0).crawlCursor());
-        assertEquals("cursor-02-recrawl", batches.get(1).crawlCursor());
-        assertEquals("cursor-03-tombstone", batches.get(2).crawlCursor());
+        assertEquals(5, batches.size());
+        assertEquals("github-cursor-01", batches.get(0).crawlCursor());
+        assertEquals("github-cursor-02", batches.get(1).crawlCursor());
+        assertEquals("cursor-01-initial", batches.get(2).crawlCursor());
+        assertEquals("cursor-02-recrawl", batches.get(3).crawlCursor());
+        assertEquals("cursor-03-tombstone", batches.get(4).crawlCursor());
 
-        ConnectorCrawlBatch initial = batches.get(0);
+        ConnectorCrawlBatch gitHubInitial = batches.get(0);
+        assertEquals(ConnectorContractVersions.supported(), gitHubInitial.versions());
+        assertEquals("github", gitHubInitial.sourceSystem());
+        assertEquals("77__201", gitHubInitial.contents().getFirst().externalObjectId());
+
+        ConnectorCrawlBatch initial = batches.get(2);
         assertEquals(ConnectorContractVersions.supported(), initial.versions());
         assertEquals("slack", initial.sourceSystem());
         assertEquals(3, initial.identities().size());
@@ -34,11 +41,11 @@ class FileConnectorBatchSourceTests {
         assertEquals("C-general-msg", initial.contents().getFirst().externalObjectId());
         assertEquals(1, initial.permissions().size());
 
-        ConnectorCrawlBatch recrawl = batches.get(1);
+        ConnectorCrawlBatch recrawl = batches.get(3);
         assertTrue(recrawl.contents().isEmpty());
         assertEquals(1, recrawl.permissions().size());
 
-        ConnectorCrawlBatch tombstone = batches.get(2);
+        ConnectorCrawlBatch tombstone = batches.get(4);
         assertEquals(1, tombstone.tombstones().size());
         assertEquals("C-general-msg", tombstone.tombstones().getFirst().externalObjectId());
     }
